--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dbeining/react-atom": "^4.1.0",
     "@types/jest": "24.0.9",
     "@types/node": "11.9.5",
     "@types/react": "16.8.5",
     "@types/react-dom": "16.8.2",
+    "ramda": "^0.26.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
@@ -26,5 +28,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/ramda": "^0.25.51"
+  }
 }
