--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/node": "11.9.5",
     "@types/react": "16.8.5",
     "@types/react-dom": "16.8.2",
-    "ramda": "^0.26.1",
+    "rambda": "^2.3.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
@@ -31,7 +31,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/ramda": "^0.25.51",
     "node-sass": "^4.11.0"
   }
 }
