--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@types/node": "11.9.5",
     "@types/react": "16.8.5",
     "@types/react-dom": "16.8.2",
+    "immer": "^2.1.0",
     "rambda": "^2.3.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-use-form-state": "^0.7.0",
     "typescript": "3.3.3333"
@@ -31,6 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react-router-dom": "^4.3.1",
     "node-sass": "^4.11.0"
   }
 }
