--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@dbeining/react-atom": "^4.1.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@rehooks/component-size": "^1.0.2",
     "@svgr/webpack": "4.1.0",
     "@types/jest": "24.0.9",
     "@types/node": "11.9.5",
