--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@types/react": "16.8.5",
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -35,6 +40,8 @@
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.1",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "immer": "^2.1.0",
@@ -49,7 +56,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
-    "rambda": "^2.3.2",
+    "rambda": "^2.4.1",
     "react": "^16.8.3",
     "react-app-polyfill": "^0.2.1",
     "react-dev-utils": "^7.0.3",
@@ -63,6 +70,7 @@
     "typescript": "3.3.3333",
     "url-loader": "1.1.2",
     "use-react-router": "^1.0.3",
+    "uuid": "^3.3.2",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
